tests/snapshots/render/iterm2@commonmark-spec-066-atx_headings.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/066-atx_headings.md
snapshot_kind: text
---
]1337;SetMark\[1m[34mfoo [0m[1m[3m[34mbar[0m[1m[34m [0m[1m[34m*baz[0m[1m[34m*[0m
[1m[34m════════════════════════════════════════════════════════════════════════════════[0m
