tests/snapshots/render/iterm2@commonmark-spec-074-atx_headings.snap
---
source: tests/render.rs
assertion_line: 113
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: tests/markdown/commonmark-spec/074-atx_headings.md
snapshot_kind: text
---
]1337;SetMark\[1m[34mfoo ### b[0m
